--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Header -->
+
     <header>
       <div class="container">
         <div class="header-content">
@@ -97,7 +97,7 @@
           <div class="col-md-6">
             <div class="image-wrapper">
               <img
-                src="/img/img1.png"
+                src="./img/img1.png"
                 alt="IT Обучение"
                 class="full-width-img"
               />
